<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.infobip</groupId>
	<artifactId>infobip-spring-data-querydsl</artifactId>
	<version>10.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Infobip Spring Data Querydsl</name>

	<description>
		Infobip Spring Data Querydsl provides new functionality that enables the user to leverage the full power of Querydsl API on top of Spring Data repository infrastructure.
	</description>

	<organization>
		<name>Infobip Ltd.</name>
		<url>https://www.infobip.com/</url>
	</organization>

	<url>https://github.com/infobip/infobip-spring-data-querydsl</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/infobip/infobip-spring-data-querydsl.git</url>
		<connection>scm:git:git://github.com:infobip/infobip-spring-data-querydsl.git</connection>
		<developerConnection>scm:git:git@github.com:infobip/infobip-spring-data-querydsl.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>

	<modules>
		<module>infobip-spring-data-common</module>
		<module>infobip-spring-data-jpa-querydsl</module>
		<module>infobip-spring-data-jpa-querydsl-boot-starter</module>
		<module>infobip-spring-data-jdbc-querydsl</module>
		<module>infobip-spring-data-jdbc-querydsl-boot-starter</module>
		<module>infobip-spring-data-jdbc-annotation-processor</module>
		<module>infobip-spring-data-jdbc-annotation-processor-common</module>
		<module>infobip-spring-data-r2dbc-querydsl</module>
		<module>infobip-spring-data-r2dbc-querydsl-boot-starter</module>
		<module>infobip-spring-data-bom</module>
	</modules>

	<developers>
		<developer>
			<id>lpandzic</id>
			<name>Lovro Pandžić</name>
			<email>lovro.pandzic@infobip.com</email>
			<organization>Infobip Ltd.</organization>
		</developer>
		<developer>
			<id>tstavinoha</id>
			<name>Tin Stavinoha</name>
			<email>tin.stavinoha@infobip.com</email>
			<organization>Infobip Ltd.</organization>
		</developer>
	</developers>

	<properties>
		<!-- DEPENDENCY VERSIONS -->
		<spring-boot.version>3.5.0</spring-boot.version>
        <!-- Use the OpenFeign-maintained Querydsl fork -->
        <querydsl.groupId>io.github.openfeign.querydsl</querydsl.groupId>
        <querydsl.version>7.0</querydsl.version>

		<infobip-testcontainers.version>4.4.4</infobip-testcontainers.version>

		<auto-service.version>1.0.1</auto-service.version>

		<!-- PLUGIN VERSIONS -->
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
		<maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
		<maven-javadoc-plugin.version>3.3.0</maven-javadoc-plugin.version>
		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>

		<!-- OTHER PROPERTIES -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>

		<kotlin.version>1.9.0</kotlin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!--TEST-->
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-sqlserver</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.infobip</groupId>
			<artifactId>infobip-mssql-testcontainers-spring-boot-starter</artifactId>
			<version>${infobip-testcontainers.version}</version>
			<scope>test</scope>
		</dependency>

<!--        &lt;!&ndash; OpenFeign Querydsl 7.0 &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>io.github.openfeign.querydsl</groupId>-->
<!--            <artifactId>querydsl-core</artifactId>-->
<!--            <version>${querydsl.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.github.openfeign.querydsl</groupId>-->
<!--            <artifactId>querydsl-apt</artifactId>-->
<!--            <version>${querydsl.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.github.openfeign.querydsl</groupId>-->
<!--            <artifactId>querydsl-jpa</artifactId>-->
<!--            <version>${querydsl.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.github.openfeign.querydsl</groupId>-->
<!--            <artifactId>querydsl-sql</artifactId>-->
<!--            <version>${querydsl.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.github.openfeign.querydsl</groupId>-->
<!--            <artifactId>querydsl-sql-codegen</artifactId>-->
<!--            <version>${querydsl.version}</version>-->
<!--        </dependency>-->
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
					<configuration>
						<source>${java.version}</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven-failsafe-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <configuration>
                    <jvmTarget>17</jvmTarget>
                </configuration>
                <executions>
                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<executions>
					<execution>
						<id>default-compile</id>
						<phase>none</phase>
					</execution>
					<execution>
						<id>default-testCompile</id>
						<phase>none</phase>
					</execution>
					<execution>
						<id>java-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>java-test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<release>${java.version}</release>
					<compilerArgument>-parameters</compilerArgument>
					<testCompilerArgument>-parameters</testCompilerArgument>
					<encoding>utf8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>${coveralls-maven-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>javax.xml.bind</groupId>
						<artifactId>jaxb-api</artifactId>
						<version>2.3.1</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>ossrh</id>
			<name>SonatypeReleases</name>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
</project>
